@@ -6,6 +6,8 @@ Next release
 
 - Python 3 compatibility.
 
+- Allow an ``onerror`` callback to be passed to ``Scanner.scan()``.
+
 0.9 (2011-06-18)
 ----------------
 
